fix: fix mobile view gap

--- a/editor-components/call_to_action/call_to_action19/call_to_action19.module.scss
+++ b/editor-components/call_to_action/call_to_action19/call_to_action19.module.scss
@@ -148,8 +148,6 @@
         }
 
         .content {
-            gap: var(--composer-gap-xl);
-
             .left-section {
                 .header {
                     .bottom-row {
